When deleting port widgets, also delete the corresponding UML port

BUG:403515
FIXED-IN:2.27.2 (KDE Applications 18.12.2)